fix on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,6 @@ h1 {
   font-family: 'Playfair Display SC', serif;
 }
 
-.title {
-  font-size: 60px;
-}
 
 .card {
   margin-bottom: 15px;
